updated words count in reply edittext

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -223,6 +223,7 @@
                     android:hint="Write a reply..."
                     android:maxLines="5"
                     android:textSize="16sp"
+                    android:maxLength="500"
                     android:textAlignment="textStart"
                     android:gravity="top|start"
                     android:textColor="@color/black"
