--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
+        android:importantForAutofill="no"
         android:selectAllOnFocus="true"
         android:padding="10dp"
         android:textColor="@color/black"
