Logout function added, login check added

--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -69,24 +69,24 @@
                         android:id="@+id/post_author_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Unknown"
+                        android:text="."
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:textAlignment="textStart"
                         android:paddingHorizontal="3dp"
                         android:paddingVertical="2dp"
-                        app:layout_constraintBottom_toTopOf="@id/post_timestamp"
+                        app:layout_constraintBottom_toTopOf="@id/post_author_email"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         />
 
                     <TextView
-                        android:id="@+id/post_timestamp"
+                        android:id="@+id/post_author_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="user@gmail.com"
+                        android:text="."
                         android:textColor="@color/light_gray"
                         android:textSize="14sp"
                         android:textAlignment="textStart"
