--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -79,6 +79,8 @@
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_password"
         android:imeOptions="actionDone"
+        android:imeActionLabel="Done"
+        android:singleLine="true"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         android:padding="10dp"
