--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -69,7 +69,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintEnd_toStartOf="@+id/post_options"
                             app:layout_constraintStart_toEndOf="@+id/post_author_imgholder"
                             app:layout_constraintTop_toTopOf="parent"
                             android:orientation="vertical"
@@ -111,6 +111,25 @@
                             </TextView>
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
+
+                        <Button
+                            android:id="@+id/post_options"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:layout_marginHorizontal="5dp"
+                            android:layout_marginVertical="1dp"
+                            android:text="@string/horizontal_ellipsize"
+                            android:textSize="25sp"
+                            android:textStyle="bold"
+                            android:textAlignment="center"
+                            android:gravity="center"
+                            android:textColor="@color/dark_gray"
+                            android:background="@drawable/bg_options"
+                            android:textAppearance="?android:textAppearanceLarge"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toEndOf="@+id/post_author_text"
+                            app:layout_constraintTop_toTopOf="parent"
+                            />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
