--- a/app/src/main/res/layout/reply_single.xml
+++ b/app/src/main/res/layout/reply_single.xml
@@ -44,7 +44,7 @@
         android:id="@+id/reply_author_imgholder"
         android:layout_width="55dp"
         android:layout_height="55dp"
-        android:src="@drawable/default_profile_img"
+        android:src="@drawable/img_default_profile"
         app:civ_border_width="0dp"
         app:civ_border_color="@color/lighter_gray"
         android:layout_marginStart="0dp"
@@ -72,7 +72,7 @@
             android:id="@+id/reply_inner_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/reply_gray"
+            android:background="@drawable/bg_reply_gray"
             app:layout_constraintBottom_toTopOf="@id/reply_timestamp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
