--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -42,7 +42,7 @@
                     android:id="@+id/post_author_imgholder"
                     android:layout_width="55dp"
                     android:layout_height="55dp"
-                    android:src="@drawable/default_profile_img"
+                    android:src="@drawable/img_default_profile"
                     app:civ_border_width="0dp"
                     app:civ_border_color="@color/lighter_gray"
                     android:layout_marginStart="8dp"
@@ -124,7 +124,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/input_post_body"
-                android:background="@drawable/border_box"
+                android:background="@drawable/bg_single_post"
             />
 
             <EditText
@@ -148,7 +148,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toTopOf="@id/post_img"
-                android:background="@drawable/border_box"
+                android:background="@drawable/bg_single_post"
                 />
 
             <ImageView
@@ -219,7 +219,7 @@
                 android:id="@+id/add_post_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/button_post"
+                android:background="@drawable/bg_button_post"
                 android:text="ADD POST"
                 android:textColor="@color/white"
                 android:enabled="false"
