--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -52,7 +52,7 @@
                             android:id="@+id/post_author_imgholder"
                             android:layout_width="55dp"
                             android:layout_height="55dp"
-                            android:src="@drawable/default_profile_img"
+                            android:src="@drawable/img_default_profile"
                             app:civ_border_width="0dp"
                             app:civ_border_color="@color/lighter_gray"
                             android:layout_marginStart="8dp"
@@ -193,7 +193,7 @@
                         android:paddingHorizontal="10dp"
                         android:paddingVertical="5dp"
                         android:layout_marginTop="10dp"
-                        android:background="@drawable/border_box_2"
+                        android:background="@drawable/bg_lightest_gray"
                         app:layout_constraintTop_toBottomOf="@+id/post_img"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -246,7 +246,7 @@
                     android:textAlignment="textStart"
                     android:gravity="top|start"
                     android:textColor="@color/black"
-                    android:background="@drawable/border_box"
+                    android:background="@drawable/bg_single_post"
                     android:paddingVertical="10dp"
                     android:paddingHorizontal="10dp"
                     android:layout_marginEnd="10dp"
@@ -260,7 +260,7 @@
                     android:id="@+id/add_reply_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/button_post"
+                    android:background="@drawable/bg_button_post"
                     android:text="ADD REPLY"
                     android:textColor="@color/white"
                     android:enabled="false"
