--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
-                android:background="@drawable/gray_gradient"
+                android:background="@drawable/bg_gray_gradient"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
                     android:id="@+id/profile_header_img"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:src="@drawable/default_profile_img"
+                    android:src="@drawable/img_default_profile"
                     app:civ_border_width="3dp"
                     app:civ_border_color="@color/lighter_gray"
                     android:layout_marginStart="8dp"
