--- a/app/src/main/res/layout/post_single.xml
+++ b/app/src/main/res/layout/post_single.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border_box"
+    android:background="@drawable/bg_single_post"
     android:layout_marginBottom="10dp"
     >
 
@@ -57,7 +57,7 @@
             android:id="@+id/post_author_imgholder"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@drawable/default_profile_img"
+            android:src="@drawable/img_default_profile"
             app:civ_border_width="0dp"
             app:civ_border_color="@color/lighter_gray"
             android:layout_marginStart="8dp"
@@ -198,7 +198,7 @@
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/border_box_2"
+        android:background="@drawable/bg_lightest_gray"
         app:layout_constraintTop_toBottomOf="@+id/post_img"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -209,7 +209,7 @@
         android:id="@+id/post_view_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_gray"
+        android:background="@drawable/bg_button_gray"
         style="@style/grayButton"
         android:text="View Post"
         android:textAllCaps="true"
