post delete function added and name changes from POST to QUESTION

--- a/app/src/main/res/layout/post_single.xml
+++ b/app/src/main/res/layout/post_single.xml
@@ -84,7 +84,7 @@
                 android:id="@+id/post_author_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Unknown"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -101,7 +101,7 @@
                 android:id="@+id/post_timestamp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="01 June 2021"
+                android:text=""
                 android:textColor="@color/light_gray"
                 android:textSize="14sp"
                 android:textAlignment="textStart"
@@ -140,7 +140,7 @@
         android:id="@+id/post_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -157,7 +157,7 @@
         android:id="@+id/post_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Body"
+        android:text=""
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textAlignment="textStart"
@@ -191,7 +191,7 @@
         android:id="@+id/post_replies_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="0 replies"
+        android:text=""
         android:textColor="@color/light_gray"
         android:textSize="14sp"
         android:textAlignment="textEnd"
@@ -211,7 +211,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_button_gray"
         style="@style/grayButton"
-        android:text="View Post"
+        android:text="View Question"
         android:textAllCaps="true"
         android:paddingHorizontal="5dp"
         android:paddingVertical="5dp"
