--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -220,7 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/bg_button_post"
-                android:text="ADD POST"
+                android:text="ADD QUESTION"
                 android:textColor="@color/white"
                 android:enabled="false"
                 app:layout_constraintTop_toTopOf="parent"
