reply options with delete function

--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -79,7 +79,7 @@
                                 android:id="@+id/post_author_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Unknown"
+                                android:text=""
                                 android:textColor="@color/black"
                                 android:textSize="18sp"
                                 android:textStyle="bold"
@@ -96,7 +96,7 @@
                                 android:id="@+id/post_timestamp"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="01 June 2021"
+                                android:text=""
                                 android:textColor="@color/light_gray"
                                 android:textSize="14sp"
                                 android:textAlignment="textStart"
@@ -129,6 +129,7 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toEndOf="@+id/post_author_text"
                             app:layout_constraintTop_toTopOf="parent"
+                            style="?android:attr/borderlessButtonStyle"
                             />
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -137,11 +138,12 @@
                         android:id="@+id/post_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Title"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:textAlignment="textStart"
+                        android:textIsSelectable="true"
                         android:paddingHorizontal="10dp"
                         android:paddingVertical="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/post_header"
@@ -154,10 +156,12 @@
                         android:id="@+id/post_body"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Body"
+                        android:text=""
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         android:textAlignment="textStart"
+                        android:autoLink="all"
+                        android:textIsSelectable="true"
                         android:paddingHorizontal="10dp"
                         android:paddingVertical="5dp"
                         app:layout_constraintTop_toBottomOf="@+id/post_title"
@@ -186,7 +190,7 @@
                         android:id="@+id/post_replies_count"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="0 replies"
+                        android:text=""
                         android:textColor="@color/light_gray"
                         android:textSize="14sp"
                         android:textAlignment="textEnd"
