--- a/app/src/main/res/layout/post_single.xml
+++ b/app/src/main/res/layout/post_single.xml
@@ -132,6 +132,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/post_author_text"
             app:layout_constraintTop_toTopOf="parent"
+            style="?android:attr/borderlessButtonStyle"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -145,6 +146,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:textAlignment="textStart"
+        android:textIsSelectable="true"
         android:paddingHorizontal="10dp"
         android:paddingVertical="5dp"
         app:layout_constraintTop_toBottomOf="@+id/post_header"
@@ -161,6 +163,8 @@
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textAlignment="textStart"
+        android:autoLink="all"
+        android:textIsSelectable="true"
         android:maxLines="4"
         android:ellipsize="end"
         android:paddingHorizontal="10dp"
