--- a/app/src/main/res/layout/reply_single.xml
+++ b/app/src/main/res/layout/reply_single.xml
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_reply_gray"
-            app:layout_constraintBottom_toTopOf="@id/reply_timestamp"
+            app:layout_constraintBottom_toTopOf="@id/reply_bottom"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -85,7 +85,7 @@
                 android:id="@+id/reply_author_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Unknown"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -102,10 +102,12 @@
                 android:id="@+id/reply_body"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Reply Body"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textAlignment="textStart"
+                android:autoLink="all"
+                android:textIsSelectable="true"
                 android:paddingHorizontal="5dp"
                 android:paddingVertical="2dp"
                 app:layout_constraintTop_toBottomOf="@id/reply_author_name"
@@ -116,23 +118,60 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <TextView
-            android:id="@+id/reply_timestamp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/reply_bottom"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="01 June 2021"
-            android:textColor="@color/light_gray"
-            android:textSize="14sp"
-            android:textAlignment="textStart"
-            android:paddingHorizontal="3dp"
-            android:paddingVertical="2dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="5dp"
             app:layout_constraintTop_toBottomOf="@id/reply_inner_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            >
+
+            <TextView
+                android:id="@+id/reply_timestamp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/light_gray"
+                android:textSize="14sp"
+                android:textAlignment="textStart"
+                android:paddingHorizontal="3dp"
+                android:paddingVertical="2dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginBottom="5dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/reply_options"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+            <Button
+                android:id="@+id/reply_options"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginBottom="2dp"
+                android:text="@string/horizontal_ellipsize"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textColor="@color/dark_gray"
+                android:background="@drawable/bg_options"
+                android:textAppearance="?android:textAppearanceLarge"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/reply_timestamp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:padding="0dp"
+                android:minWidth="0dp"
+                android:minHeight="0dp"
+                style="?android:attr/borderlessButtonStyle"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
