--- a/app/src/main/res/layout/reply_options_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/reply_options_bottom_sheet_dialog.xml
@@ -13,6 +13,7 @@
         android:id="@+id/reply_option_edit"
         android:background="?android:attr/selectableItemBackground"
         android:padding="8dp"
+        android:visibility="gone"
         android:clickable="true"
         android:focusable="true">
 
