Push Services and functions with sending msg

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -41,7 +41,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                android:padding="10dp"
+                android:paddingVertical="10dp"
                 />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
